@@ -16,7 +16,17 @@ function wfSpecialRandompage( $par = null ) {
 	global $wgOut, $wgContLang;
 
 	$rnd = new RandomPage();
-	$rnd->setNamespace( $wgContLang->getNsIndex( $par ) );
+	
+	if ( $par == null ) {
+		// Select a random content namespace to use.
+		global $wgContentNamespaces;
+		$n = array_rand( $wgContentNamespaces );
+		$rnd->setNamespace( $wgContentNamespaces[$n] );
+	}
+	else {
+		$rnd->setNamespace( $wgContLang->getNsIndex( $par ) );
+	}
+
 	$rnd->setRedirect( false );
 
 	$title = $rnd->getRandomTitle();
